# racpp2014

./: .gitignore  CMakeLists.txt  main.cpp
basicscenes/: mandelbrot.cpp  mandelbrot.h
cameras/: dummycamera.cpp  dummycamera.h
core/: camera.h  core_utils.h  film.cpp  film.h  hitrecord.cpp  hitrecord.h  integrator.h  integratorfactory.cpp  integratorfactory.h  intersectable.cpp  intersectable.h  lightlist.cpp  lightlist.h  lightsource.cpp  lightsource.h  material.h  ray.h  sampler.cpp  sampler.h  samplerfactory.cpp  samplerfactory.h  scene.cpp  scene.h  spectrum.cpp  spectrum.h  tonemapper.cpp  tonemapper.h  vector3f.cpp  vector3f.h
films/: boxfilterfilm.cpp  boxfilterfilm.h
integrators/: mandelbrotintegrator.cpp  mandelbrotintegrator.h
samplers/: randomsampler.cpp  randomsampler.h
tonemappers/: clamptonemapper.cpp  clamptonemapper.h
